--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
     <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/main.css?ver=1.1.0" rel="stylesheet">
+    <script type="text/javascript">
+      function sendEmail() {
+        var name = document.getElementById("name").value;
+        var subject = document.getElementById("subject").value;
+        var email = document.getElementById("email").value;
+        var message = document.getElementById("message").value;
+    
+        var mailtoLink = `mailto:Elbrid21@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent('Name: ' + name + '\nEmail: ' + email + '\n\n' + message)}`;
+    
+        document.getElementById("mailtoLink").href = mailtoLink;
+        document.getElementById("mailtoLink").click();
+      }
+    </script>
     <noscript>
       <style type="text/css">
         [data-aos] {
@@ -515,42 +528,42 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="mailtoElbrid21@gmail.com" method="POST" enctype="text/plain"></form>
-                      <div class="p pb-3"><strong>N'hésiter pas à me contacter </strong></div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
-                            <input class="form-control" type="text" name="name" placeholder="Name" required="required"/>
-                          </div>
+                    <div class="p pb-3"><strong>N'hésitez pas à me contacter</strong></div>
+                    <div class="row mb-3">
+                      <div class="col">
+                        <div class="input-group"><span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
+                          <input class="form-control" type="text" id="name" placeholder="Name" required="required"/>
                         </div>
                       </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-file-text"></i></span>
-                            <input class="form-control" type="text" name="Subject" placeholder="Subject" required="required"/>
-                          </div>
+                    </div>
+                    <div class="row mb-3">
+                      <div class="col">
+                        <div class="input-group"><span class="input-group-addon"><i class="fa fa-file-text"></i></span>
+                          <input class="form-control" type="text" id="subject" placeholder="Subject" required="required"/>
                         </div>
                       </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                            <input class="form-control" type="email" name="_replyto" placeholder="E-mail" required="required"/>
-                          </div>
+                    </div>
+                    <div class="row mb-3">
+                      <div class="col">
+                        <div class="input-group"><span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                          <input class="form-control" type="email" id="email" placeholder="E-mail" required="required"/>
                         </div>
                       </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="form-group">
-                            <textarea class="form-control" name="message" placeholder="Your Message" required="required"></textarea>
-                          </div>
+                    </div>
+                    <div class="row mb-3">
+                      <div class="col">
+                        <div class="form-group">
+                          <textarea class="form-control" id="message" placeholder="Your Message" required="required"></textarea>
                         </div>
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <button class="btn btn-primary" type="submit">Envoyer</button>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <a id="mailtoLink" href="#">
+                          <button class="btn btn-primary" type="button" onclick="sendEmail()">Envoyer</button>
+                        </a>
                       </div>
-                    </form>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-6">
