--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">A Propos De Moi</div>
-            <p>Je suis Labrid Mohamed Amine. Developpeur Informatique et étudiant en 1ére année Master en Technologie de l'éducation et Innovation Pédagogique.</p>
+            <p>Je suis Labrid Mohamed Amine. Developpeur Informatique et étudiant en 2éme année Master en Technologie de l'éducation et Innovation Pédagogique.</p>
             <p ></p>Mon enthousiasme dans le développement informatique, y
             compris la programmation, la création et la conception
             d'applications web.
