--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <p class="category">École Normale Supérieure Marrakech </p>
             <p>Licence d'Education : Spécialité Enseignement Secondaire - Informatique. 
               Titre de PFE : La formation pratique en enseignement
-              Projet informatique: plarforme LB
+              Projet informatique: plarforme D'absence 
               </p>
           </div>
         </div>
