--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Stage à Lycée hassan 2</div>
-            <p>L'enseignement de la matière informatique au sein du lycée Hassan2 pour le niveau tronc commun scientifique et littéraire.</p>
+            <p>
+              Enseignement de l'informatique au lycée Hassan II pour les niveaux tronc commun scientifique et littéraire. Responsable de la planification et de la mise en œuvre de cours interactifs, couvrant des concepts fondamentaux de l'informatique. Utilisation de méthodologies pédagogiques innovantes pour favoriser la compréhension et l'engagement des élèves, tout en intégrant des outils technologiques pour améliorer l'apprentissage et la pratique.</p>
           </div>
         </div>
       </div>
@@ -365,7 +366,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">platforme de gérer l'absence </div>
-            <p>Notre projet présente comme une plateforme administrative d’un établissement, cette dernière gère l’absence hebdomadaire des étudiants</p>
+            <p>Développement d'une plateforme administrative innovante pour la gestion des absences hebdomadaires des étudiants. Cette solution centralise les informations de présence, offrant une vue en temps réel pour les administrateurs et enseignants. Elle inclut des notifications automatiques d'absence, des rapports détaillés, et un suivi personnalisé, améliorant ainsi la gestion administrative et encourageant une assiduité accrue parmi les étudiants.</p>
           </div>
         </div>
       </div>
@@ -387,9 +388,9 @@
           <div class="card-body">
             <div class="h5">Licence d'Education</div>
             <p class="category">École Normale Supérieure Marrakech </p>
-            <p>Licence d'Education : Spécialité Enseignement Secondaire - Informatique. 
-              Titre de PFE : La formation pratique en enseignement
-              Projet informatique: plarforme D'absence 
+            <p>Licence d'Education : Spécialité Enseignement Secondaire - Informatique.</br> 
+              Titre de PFE : La formation pratique en enseignement</br>
+              Projet informatique: Plarforme D'absence 
               </p>
           </div>
         </div>
